add simple app frame

--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -1,10 +1,11 @@
-<html>
+<html lang="en">
 <head>
     <title>Wotel Storefront</title>
     <meta charset="utf8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="@cdnWebjar/mdi__font/7.2.96/css/materialdesignicons.css" rel="stylesheet">
     <link href="@cdnWebjar/buefy/0.9.21/dist/buefy.min.css" rel="stylesheet">
-    <link href="/img/favicon.png" rel="icon">
+    <link href="/favicon.png" rel="icon">
     <script src="@cdnWebjar/vue/2.7.14/dist/vue.js"></script>
     <script src="@cdnWebjar/buefy/0.9.21/dist/buefy.min.js"></script>
     @componentRegistration
