--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -10,6 +10,7 @@
     <script src="@cdnWebjar/vue/2.7.14/dist/vue.js"></script>
     <script src="@cdnWebjar/buefy/0.9.21/dist/buefy.min.js"></script>
     @componentRegistration
+    <style>@inlineFile("/vue/inline/styles.css")</style>
 </head>
 <body>
 <main id="main-vue" v-cloak>
