add revoke frontend

--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -17,6 +17,7 @@
     @routeComponent
 </main>
 <script>
+    Vue.prototype.$javalin = window.JavalinVue;
     new Vue({el: "#main-vue"});
 </script>
 </body>
